# sigil

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
crates/sigil-agent-python/: Cargo.toml  pyproject.toml
crates/sigil-agent-python/src/: lib.rs
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: chat.rs  contacts.rs  discovery.rs  identity.rs  main.rs  storage.rs  test_e2e.rs  ui.rs
crates/sigil-core/: Cargo.toml
crates/sigil-core/examples/: echo_agent.rs  gen_qr.rs  hermes_bridge.rs  send_message.rs  send_tui.rs
crates/sigil-core/src/: access.rs  agent.rs  channel.rs  file.rs  guard.rs  lib.rs  message.rs  qr.rs  registry.rs  relay.rs  tui.rs
docs/: index.html  privacy.html  support.html
examples/: python_agent.py
ios/Sigil/: Package.resolved  Package.swift  Sigil.entitlements
ios/Sigil.xcodeproj/: project.pbxproj
ios/Sigil.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Sigil.xcodeproj/project.xcworkspace/xcuserdata/lman.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Sigil.xcodeproj/xcuserdata/lman.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Sigil/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Sigil/Sources/App/: SigilApp.swift
ios/Sigil/Sources/Models/: Models.swift
ios/Sigil/Sources/Services/: DeviceLinking.swift  NostrService.swift
ios/Sigil/Sources/Views/: AddFriendView.swift  AgentProfileView.swift  ChatView.swift  ContentView.swift  DeviceLinkView.swift  MyProfileView.swift  QRCodeView.swift  QRScannerView.swift  Theme.swift
protocol/: NIP-C1-tui-messages.md  NIP-XX-agent-identity.md  NIP-YY-tui-messages.md
skills/sigil-nostr/: SKILL.md
