[package]
name = "sigil-agent-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Sigil agent SDK via PyO3"

[lib]
name = "sigil_agent"
crate-type = ["cdylib"]

[dependencies]
sigil-core = { path = "../sigil-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
