[package]
name = "sigil-cli"
version = "0.4.0"
edition = "2021"
description = "Terminal messenger client for Sigil — AI-Native Messenger built on Nostr"
license = "MIT"
repository = "https://github.com/lmanchu/sigil"
keywords = ["nostr", "messenger", "ai", "agent", "tui"]
categories = ["command-line-utilities", "network-programming"]
default-run = "sigil"

[[bin]]
name = "sigil"
path = "src/main.rs"

[[bin]]
name = "sigil-test"
path = "src/test_e2e.rs"

[dependencies]
sigil-core = { path = "../sigil-core" }
nostr-sdk = { version = "0.39", features = ["all-nips"] }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
unicode-width = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
