[package]
name = "sigil-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Sigil AI-Native Messenger — Nostr-based agent messaging"

[dependencies]
nostr-sdk = { version = "0.39", features = ["all-nips"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
image = "0.25"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
