[package]
name = "sigil-core"
version = "0.5.0"
edition = "2021"
description = "Core library for Sigil AI-Native Messenger — Nostr-based agent messaging"
license = "MIT"
repository = "https://github.com/lmanchu/sigil"
keywords = ["nostr", "messenger", "ai", "agent"]
categories = ["network-programming"]

[dependencies]
nostr-sdk = { version = "0.39", features = ["all-nips"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
image = "0.25"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
reqwest = { version = "0.12", features = ["multipart", "json"] }
sha2 = "0.10"
